--- a/style.css
+++ b/style.css
@@ -3,15 +3,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Creepster', cursive;
-  background-color: #000;
-  color: #ff1a1a;
-  overflow-x: hidden;
-  box-sizing: border-box;
-  background-image: url('https://files.catbox.moe/l1qmio.jpg');
+  background-image: url('https://files.catbox.moe/0nlvog.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed
+  background-attachment: fixed;
+  color: #ff1a1a;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 /* الشريط العلوي */
